# ckanext-scryfall

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: black.yml  test.yml
ckanext/scryfall/: plugin.py
ckanext/scryfall/assets/: script.js  webassets.yml
ckanext/scryfall/tests/: test_plugin.py
ckanext/wms_viewer/: plugin.py
ckanext/wms_viewer/assets/: script.js  webassets.yml
ckanext/wms_viewer/public/: style.css
ckanext/wms_viewer/templates/views/: wms_template.html
ckanext/wms_viewer/tests/: test_plugin.py
