[metadata]
name = ckanext-wms-viewer
version = 0.0.1
description = mapserver WMS map viewer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/L-Har/ckanext-wms-viewer
author = lh
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN mapserver wms map viewer

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             wms_viewer = ckanext.wms_viewer.plugin:WmsViewerPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/wms_viewer/i18n/ckanext-wms_viewer.pot
width = 80

[init_catalog]
domain = ckanext-wms_viewer
input_file = ckanext/wms_viewer/i18n/ckanext-wms_viewer.pot
output_dir = ckanext/wms_viewer/i18n

[update_catalog]
domain = ckanext-wms_viewer
input_file = ckanext/wms_viewer/i18n/ckanext-wms_viewer.pot
output_dir = ckanext/wms_viewer/i18n
previous = true

[compile_catalog]
domain = ckanext-wms_viewer
directory = ckanext/wms_viewer/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
